Review code and unit test of browserApplicationStudent  plus some correction to documentation
